--- a/styles/style.css
+++ b/styles/style.css
@@ -164,6 +164,16 @@ body
     font-weight: 300;
 }
 
+.currentDateDisplay
+{
+    grid-column: 4 / 7;
+    grid-row: 1;
+    margin-top: 10px;
+    color: white;
+    font-size: 36px;
+    text-align: center;
+}
+
 
 /* MAIN DISPLAY END */
 
