--- a/styles/style.css
+++ b/styles/style.css
@@ -208,6 +208,8 @@ body
     text-align: center;
     font-size: 36px;
     margin-bottom: 0;
+    font-weight: 300;
+    color: #FFFFFF;
 }
 
 .minMaxTemp
@@ -225,16 +227,25 @@ body
 
 .minMaxTemp h1
 {
-    font-size: 48px;
+    text-align: center;
+    font-size: 96px;
     margin-bottom: 0;
     color: #FFFFFF;
 }
 .minMaxTemp h5
 {
     text-align: center;
-    font-size: 48px;
+    font-size: 96px;
     margin-bottom: 0;
     color: gray;
+}
+
+.minMaxTemp h6
+{
+    color: #FFFFFF;
+    font-size: 36px;
+    text-align: center;
+    font-weight: 300;
 }
 
 .minMaxTemp img
