--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,8 @@ body
 .current p 
 {
     font-size: 24px;
+    width: 100%;
+    overflow-x: scroll;
 }
 
 .current img
@@ -83,7 +85,7 @@ body
 
 .end
 {
-    width: 100%;
+    width: auto;
     height: 100%;
     display: flex;
     justify-content: end;
@@ -136,6 +138,16 @@ body
 
 
 /* MAIN DISPLAY START */
+
+.mainDisplayDeegree
+{
+    font-size: 48px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
 
 .mainDisplay
 {
@@ -193,6 +205,7 @@ body
     color: white;
 }
 
+
 .currentTempDisplay img
 {
     max-height: 200px;
@@ -200,6 +213,7 @@ body
 
 .currentTempDisplay h1
 {
+    position: relative;
     font-size: 128px;
     margin-bottom: 0;
 }
@@ -222,7 +236,7 @@ body
 
 .minMaxTemp div
 {
-    padding-right: 10px;
+    padding-right: 30px;
 }
 
 .minMaxTemp h1
@@ -231,6 +245,7 @@ body
     font-size: 96px;
     margin-bottom: 0;
     color: #FFFFFF;
+    position: relative;
 }
 .minMaxTemp h5
 {
@@ -238,14 +253,18 @@ body
     font-size: 96px;
     margin-bottom: 0;
     color: gray;
+    position: relative;
 }
 
 .minMaxTemp h6
 {
     color: #FFFFFF;
-    font-size: 36px;
+    font-size: 30px;
     text-align: center;
     font-weight: 300;
+    max-height: 180px;
+    margin-bottom: 0;
+
 }
 
 .minMaxTemp img
