--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,27 @@ body
 .previousSearches
 {
     background-color: #D9D9D9;
+    display: none;
+    position: absolute;
+    background-color: #D9D9D9;
+    min-width: 333px;
+    max-width: 333px;
+    z-index: 1;
+    font-size: 28px;
+    
+}
+
+.showPrevious
+{
+    display:block;
+    display: flex;
+    flex-direction: column;
+}
+
+.previousSearches img
+{
+    max-width: 32px;
+    max-height: 32px;
 }
 
 /* SEARCH BAR END */
@@ -68,6 +89,7 @@ body
     height: 53px;
     display: flex;
     align-items: center;
+    
 }
 
 .current p 
